--- a/ES/手写代码问题.md
+++ b/ES/手写代码问题.md
@@ -6,14 +6,15 @@
 * call
 * apply
 * bind
-* instanceof 
+* [instanceof](instanceof.js)
 * typeof
 * 浅拷贝 深拷贝
 * 节流 防抖
 * 继承 (实现继承的几种方式
 * JSON.stringfy
 * JSON.parse
-
+* [数组扁平化](flat.js)
+* [数组去重](unique.js)
 
 [(https://www.sohu.com/a/353718953_465223)]
 
